# autospy

./: Cargo.toml  README.md  justfile
.github/workflows/: nightly.yml  on_commit.yml
autospy_macro/: Cargo.toml  README.md
autospy_macro/src/: arguments.rs  associated_types.rs  attribute.rs  edit.rs  generate.rs  generate_spy.rs  generate_spy_default.rs  generate_spy_struct.rs  generate_spy_trait.rs  generics.rs  inspect.rs  lib.rs  strip_attributes.rs  supertraits.rs
autospy_macro/src/snapshots/: autospy_macro__generate__tests__arguments_marked_with_cfg_test_ignore_attribute_are_not_captured.snap  autospy_macro__generate__tests__arguments_marked_with_cfg_test_into_attribute_are_captured_as_that_type.snap  autospy_macro__generate__tests__arguments_marked_with_cfg_test_with_attribute_are_captured_with_that_expression.snap  autospy_macro__generate__tests__arguments_marked_with_ignore_attribute_are_not_captured.snap  autospy_macro__generate__tests__arguments_marked_with_into_attribute_are_captured.snap  autospy_macro__generate__tests__arguments_marked_with_into_attribute_are_captured_as_that_type.snap  autospy_macro__generate__tests__arguments_marked_with_multiple_attributes_retain_non_autospy_attributes.snap  autospy_macro__generate__tests__arguments_marked_with_nospy_attribute_are_not_captured.snap  autospy_macro__generate__tests__arguments_marked_with_nospy_attribute_are_not_captured.snap.new  autospy_macro__generate__tests__arguments_marked_with_with_attribute_are_captured_by_function_call.snap  autospy_macro__generate__tests__arguments_marked_with_with_attribute_are_captured_with_that_expression.snap  autospy_macro__generate__tests__async_trait.snap  autospy_macro__generate__tests__async_trait_with_other_trait_requirements.snap  autospy_macro__generate__tests__borrowed_argument_is_converted_to_owned_type.snap  autospy_macro__generate__tests__function_with_no_arguments.snap  autospy_macro__generate__tests__function_with_non_void_return_type.snap  autospy_macro__generate__tests__functions_marked_with_cfg_test_return_attribute_have_their_return_types_changed.snap  autospy_macro__generate__tests__functions_marked_with_multiple_attributes_retain_non_autospy_attributes.snap  autospy_macro__generate__tests__functions_marked_with_return_attribute_have_their_return_types_changed.snap  autospy_macro__generate__tests__method_with_no_arguments.snap  autospy_macro__generate__tests__method_with_non_void_return_type.snap  autospy_macro__generate__tests__method_with_single_borrowed_argument_has_coverted_to_owned_type_in_spy.snap  autospy_macro__generate__tests__multiple_arguments_that_are_nested_references_converted_to_owned.snap  autospy_macro__generate__tests__multiple_arguments_that_are_nested_references_converted_to_owned_in_spy.snap  autospy_macro__generate__tests__multiple_borrowed_arguments_converted_to_owned.snap  autospy_macro__generate__tests__multiple_borrowed_arguments_converted_to_owned_in_spy.snap  autospy_macro__generate__tests__multiple_functions_with_no_arguments.snap  autospy_macro__generate__tests__multiple_ignored_arguments_are_not_captured.snap  autospy_macro__generate__tests__multiple_impl_bounds_static_argument_converted_to_boxed_dyn.snap  autospy_macro__generate__tests__multiple_methods_with_no_arguments.snap  autospy_macro__generate__tests__multiple_nested_references_in_argument_converted_to_owned_type.snap  autospy_macro__generate__tests__multiple_owned_arguments.snap  autospy_macro__generate__tests__multiple_owned_arguments_moved_in_spy.snap  autospy_macro__generate__tests__single_borrowed_argument_has_coverted_to_owned_type_in_spy.snap  autospy_macro__generate__tests__single_owned_argument.snap  autospy_macro__generate__tests__single_owned_argument_is_moved_into_spy.snap  autospy_macro__generate__tests__single_static_impl_argument_converted_to_boxed_dyn.snap  autospy_macro__generate__tests__trait_with_non_pub_crate_visibility.snap  autospy_macro__generate__tests__trait_with_pub_crate_visibility.snap  autospy_macro__generate__tests__trait_with_pub_visibility.snap  (+14 more)
examples/: actix.rs  axum.rs  rocket.rs
src/: lib.rs  macros.rs  old.rs  spy_function.rs
tests/: acceptance.rs  arguments.rs  array_arguments.rs  associated_const_attribute.rs  associated_type_arguments.rs  associated_type_returns.rs  associated_type_with_bounds.rs  async_trait.rs  async_trait_recv.rs  borrowed_arguments.rs  clippy.rs  extern_std.rs  external_trait.rs  function_arguments.rs  generic_associated_type.rs  generic_function.rs  generic_function_with_impl.rs  generic_function_with_lifetime.rs  generic_functions_with_where_clause.rs  generic_trait.rs  generic_trait_functions.rs  generic_trait_with_bounds.rs  generic_trait_with_where_clause.rs  ignore_argument_attribute.rs  impl_trait_arguments.rs  implicit_ignore_argument.rs  integration.rs  into_argument_attribute.rs  lifetime_reference_returns.rs  marker_supertrait.rs  multiple_arguments.rs  multiple_functions.rs  multiple_generics_trait.rs  multiple_generics_trait_functions.rs  multiple_reference_returns.rs  multiple_supertraits.rs  multiple_trait_methods.rs  mutable_reference_arguments.rs  mutable_reference_returns.rs  owned_arguments.rs  (+19 more)
tests/cases/: array_argument.rs  array_arguments.rs  associated_const_attribute.rs  associated_type_arguments.rs  associated_type_returns.rs  async_trait_with_timeout.rs  borrowed_arguments.rs  function_arguments.rs  generic_trait.rs  generic_trait_with_where_clause.rs  ignore_argument_attribute.rs  ignore_attribute_arguments.rs  ignored_arguments.rs  into_argument_attribute.rs  mod.rs  multiple_generics_trait.rs  multiple_trait_methods.rs  nospy_attribute_arguments.rs  owned_arguments.rs  owned_returns.rs  return_type_attribute.rs  single_borrowed_argument.rs  struct_arguments.rs  trait_arguments.rs  use_default_attribute.rs  with_argument_attribute.rs
