[package]
name = "autospy"
version = "0.0.3"
edition = "2024"
description = "A test spy object library."
license = "MIT"
repository = "https://github.com/lhalf/autospy"
documentation = "https://docs.rs/autospy"
keywords = ["mock", "testing", "spy", "mocking", "fake"]
categories = ["development-tools::testing"]
readme = "README.md"
exclude = ["/tests/", "justfile", "/examples/"]

[features]
test = []
default = ["test"]

[workspace]
members = ["autospy_macro"]

[dependencies]
autospy_macro = { path = "autospy_macro", version = "0.0.3" }

[dev-dependencies]
async-trait = "0.1.88"
pollster = "0.4.0"
# examples
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
axum = "0.8.4"
anyhow = "1.0.98"
tower = { version = "0.5.2", features = ["util"] }
rocket = "0.5.1"
reqwest = { version = "0.12.18", default-features = false }
