[package]
name = "autospy"
version = "0.0.9"
edition = "2024"
description = "A test spy object library."
license = "MIT"
repository = "https://github.com/lhalf/autospy"
documentation = "https://docs.rs/autospy"
keywords = ["mock", "testing", "spy", "mocking", "fake"]
categories = ["development-tools::testing"]
readme = "README.md"
exclude = ["/tests", "justfile", "/examples", "/autospy_macro/src/snapshots", "/.github", ".gitignore"]

[features]
test = ["autospy_macro/test"]
async = ["dep:async-channel"]
default = ["test", "async"]

[workspace]
members = ["autospy_macro"]

[dependencies]
autospy_macro = { path = "autospy_macro", version = "0.0.8" }
const-default = { version = "1.0.0", default-features = false }
async-channel = { version = "2.3.1", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
async-trait = { version = "0.1.88", default-features = false }
pollster = { version = "0.4.0", default-features = false }
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread"] }
axum = { version = "0.8.4", default-features = false, features = ["tokio", "http2"] }
anyhow = { version = "1.0.98", default-features = false }
tower = { version = "0.5.2", default-features = false, features = ["util"] }
rocket = { version = "0.5.1", default-features = false }
reqwest = { version = "0.12.18", default-features = false }
actix-web = { version = "4.11.0", default-features = false, features = ["macros"] }
