[package]
name = "autospy_macro"
version = "1.6.1"
edition = "2024"
description = "Procedural macros for autospy."
license = "MIT"
repository = "https://github.com/lhalf/autospy"
documentation = "https://docs.rs/autospy"
keywords = ["mock", "testing", "spy", "mocking", "fake"]
categories = ["development-tools::testing"]
readme = "README.md"
exclude = ["/src/snapshots/"]

[features]
test = []

[package.metadata.release]
tag = false
push = false

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = { version = "1.0.42", default-features = false }
syn = { version = "2.0.111", default-features = false, features = ["parsing", "proc-macro", "full", "printing", "clone-impls", "visit-mut", "extra-traits", "visit", "fold"] }
proc-macro2 = { version = "1.0.103", default-features = false }

[dev-dependencies]
insta = { version = "1.45.0", default-features = false }
prettyplease = { version = "0.2.37", default-features = false }
